# strands-nova

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: publish-test.yml  publish.yml  test.yml
examples/: basic_usage.py  runtime_with_strands_and_bedrock_model.ipynb  streaming_example.py
examples/notebooks/: runtime_with_strands_and_nova_model.ipynb  strands-nova-quickstart.ipynb
scripts/: show_model_categories.py
src/amazon_nova/: __init__.py
src/strands_amazon_nova/: __init__.py  nova.py
src/strands_nova/: __init__.py  nova.py
tests/integration/: audio_input_input.json  conftest.py  provider_info.py  test.txt  test_basic_messages.py  test_basic_messages_streaming.py  test_multi_turn.py  test_multi_turn_streaming.py  test_multimodal.py  test_multimodal_streaming.py  test_nova_integration.py  test_openai.py  test_tool_calls.py  test_tool_calls_streaming.py
tests/unit/: conftest.py  test_initialization.py  test_message_formatting.py  test_nova.py  test_nova_config.py  test_nova_conversions.py  test_nova_errors.py  test_nova_initialization.py  test_nova_streaming.py  test_streaming.py  test_structured_output.py
